# eleven

./: CMakeLists.txt  README.md
eleven/log/: log.cpp  log.h
eleven/util/: util.cpp  util.h
src/log/: log.cpp  log.h
test/: a.out  test  test.cpp  testSStream.cpp
